<resources>
    <string name="app_name">國漢大百科</string>

    <string name="action_settings">Settings</string>
    <string name="action_recent_changes">Recent changes</string>
    <string name="action_random_page">Random page</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_share">Share</string>
    <string name="action_search_wiki">Search the wiki</string>
    <string name="action_search">Search</string>
    <string name="action_open_menu">Open Menu</string>
    <string name="action_edit">Edit</string>
    <string name="action_history">Edit history</string>
    <string name="action_create_page">Create page</string>
    <string name="action_talk">Discussion</string>
    <string name="action_start">Start</string>
    <string name="action_hide_afterwards">Don\'t show again</string>
    <string name="action_submit">Submit</string>
    <string name="action_save">Save</string>
    <string name="action_signin">Sign in</string>
    <string name="action_join">Join the wiki</string>
    <string name="action_goto">Go</string>
    <string name="action_new_doc">New…</string>
    <string name="action_discard_edit">Discard</string>
    <string name="action_keep_editing">Keep editing</string>
    <string name="action_clear">Clear input</string>
    <string name="action_add_account">Add a new account</string>
    <string name="action_signout">Sign out</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>

    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="input_content">Page content</string>
    <string name="input_summary">Edit summary</string>
    <string name="input_minor">This is a minor edit</string>

    <string name="msg_welcome">Welcome!</string>
    <string name="msg_signin_error">Error while signing in: %s</string>
    <string name="msg_edit_error">Error while saving edit: %s</string>
    <string name="msg_signin_success">Signed in with: %s</string>
    <string name="msg_signout_success">Successfully signed out.</string>
    <string name="msg_signin_failed">Sign in failed: %s</string>
    <string name="msg_edit_saved">Edit saved.</string>
    <string name="msg_edit_failed">Edit failed. Did you verify your email?</string>
    <string name="msg_confirm_edit">Please solve the CAPTCHA and submit.</string>
    <string name="msg_confirm_discard_edit">Do you want to discard the current edit?</string>
    <string name="msg_page_not_found">Page not found.</string>
    <string name="msg_preview_alert"><b>This page is a preview.</b> Your changes are not saved yet!</string>
    <string name="msg_confirm_clear_search_history">Do you want to clear the search history?</string>
    <string name="msg_launch_failed">Failed to launch.</string>

    <string name="start_locale_ko" translatable="false">한국어 한글전용</string>
    <string name="start_locale_ko_Kore_KR" translatable="false">韓國語 漢字混用</string>
    <string name="start_locale_en" translatable="false">English</string>

    <!-- Strings used for fragments for navigation -->
    <string name="start_fragment_label">國漢大百科</string>
    <string name="search_fragment_label">Search</string>
    <string name="search_result_fragment_label">Search Result</string>
    <string name="edit_fragment_label">Edit</string>
    <string name="review_edit_fragment_label">Review Edit</string>
    <string name="title_authentication_activity">Sign In</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_loading">Loading…</string>
    <string name="label_error">Error</string>
    <string name="label_search">Search for…</string>
    <string name="label_search_autocomplete_list">Search autocomplete list</string>
    <string name="label_search_result_list">Search result list</string>

    <string name="switch_account_label">Switch Account</string>
    <string name="authenticator_label">國漢大百科</string>

    <string name="anonymous">Anonymous</string>
    <string name="select_account">Select account</string>
    <string name="footnote">Footnote #%d</string>

    <string name="account_type" translatable="false">io.github.lee0701.gukhanwiki.android</string>


<!--    Preference strings-->
    <string name="pref_display_header">Display</string>
    <string name="pref_display_text_size_title">Text size</string>
    <string name="pref_display_text_size_smaller">Smaller</string>
    <string name="pref_display_text_size_small">Small</string>
    <string name="pref_display_text_size_medium">Medium</string>
    <string name="pref_display_text_size_large">Large</string>
    <string name="pref_display_text_size_larger">Larger</string>

    <string name="pref_display_locale_title">Language and Script</string>
    <string name="pref_display_locale_ko">Korean Hangul-only Script</string>
    <string name="pref_display_locale_ko_Kore_KR">Korean Mixed Script</string>
    <string name="pref_display_locale_en">English</string>

    <string name="pref_history_header">History</string>
    <string name="pref_history_disable_search_history_title">Disable search history</string>
    <string name="pref_history_disable_search_history_summary">Do not record search history</string>
    <string name="pref_history_clear_search_history_title">Clear search history</string>
    <string name="pref_history_reload_last_page_title">Remember last page viewed on exit</string>

    <string name="pref_ruby_header">Ruby</string>
    <string name="pref_ruby_enabled_title">Display ruby (Hanja reading)</string>
    <string name="pref_ruby_grade_title">Minimal grade for ruby display</string>
    <string name="pref_ruby_position_title">Ruby display position</string>

    <string name="pref_ruby_grade_80">Grade 8</string>
    <string name="pref_ruby_grade_72">Grade 7-II</string>
    <string name="pref_ruby_grade_70">Grade 7</string>
    <string name="pref_ruby_grade_62">Grade 6-II</string>
    <string name="pref_ruby_grade_60">Grade 6</string>
    <string name="pref_ruby_grade_52">Grade 5-II</string>
    <string name="pref_ruby_grade_50">Grade 5</string>
    <string name="pref_ruby_grade_42">Grade 4-II</string>
    <string name="pref_ruby_grade_40">Grade 4</string>
    <string name="pref_ruby_grade_32">Grade 3-II</string>
    <string name="pref_ruby_grade_30">Grade 3</string>
    <string name="pref_ruby_grade_20">Grade 2</string>
    <string name="pref_ruby_grade_10">Grade 1</string>
    <string name="pref_ruby_grade_0">Special</string>
    <string name="pref_ruby_grade_none">None</string>

    <string name="pref_ruby_position_side">Side</string>
    <string name="pref_ruby_position_top">Top</string>

    <string name="pref_about_header">About</string>
    <string name="pref_about_app_info_title">國漢大百科 Official App</string>
    <string name="pref_about_app_info_summary">@string/app_version_name</string>
    <string name="pref_about_developer_info_title">Developer contact</string>
    <string name="pref_about_developer_info_summary">hgl1002@naver.com</string>
    <string name="pref_about_privacy_policy_title">Privacy Policy</string>
    <string name="pref_about_more_apps_title">More Apps</string>
    <string name="pref_about_more_apps_summary">Discover more apps from this app\'s developer</string>
    <string name="pref_about_oss_licenses_title">Open source Licenses</string>

</resources>