<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_ruby_header">

        <SwitchPreferenceCompat
            app:key="ruby_enabled"
            app:defaultValue="true"
            app:title="@string/pref_ruby_enabled_title" />

        <ListPreference
            app:key="ruby_grade"
            app:defaultValue="80"
            app:entries="@array/pref_ruby_grade_entries"
            app:entryValues="@array/pref_ruby_grade_values"
            app:title="@string/pref_ruby_grade_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="ruby_position"
            app:defaultValue="top"
            app:entries="@array/pref_ruby_position_entries"
            app:entryValues="@array/pref_ruby_position_values"
            app:title="@string/pref_ruby_position_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>