<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.lee0701.gukhanwiki.android.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_accounts"
        android:title="@string/action_accounts"
        android:icon="@drawable/baseline_account_circle_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recent_changes"
        android:title="@string/action_recent_changes"
        android:icon="@drawable/baseline_sync_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="never" />
</menu>