<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/title"
            app:srcCompat="@drawable/title"
            android:adjustViewBounds="true"
            android:theme="@style/Theme.GukhanWikiAppAndroid.TitleLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_text"
            android:text="@string/msg_welcome"
            android:textSize="28sp"
            android:textColor="?colorOnSecondary"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start"
            android:text="@string/action_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            android:paddingHorizontal="64dp"
            android:paddingVertical="@dimen/margin_medium" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_locale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_small"
            android:paddingHorizontal="32dp"
            android:paddingVertical="@dimen/margin_small" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_hide"
            android:text="@string/action_hide_afterwards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_small" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>