<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.view.ViewPageFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="@dimen/margin_medium"
            android:paddingHorizontal="@dimen/margin_small">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/summary"
                android:hint="@string/input_summary"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_preview_alert" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <WebView
                    android:id="@+id/web_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <include
                    layout="@layout/indicator_loading"
                    android:id="@+id/loading_indicator"
                    android:visibility="gone" />

                <include
                    layout="@layout/indicator_error"
                    android:id="@+id/error_indicator"
                    android:visibility="gone" />

            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_fab"
        android:layout_marginRight="@dimen/margin_fab"
        android:layout_marginBottom="@dimen/margin_fab"
        app:srcCompat="@drawable/baseline_save_as_24"
        app:tint="@color/white"
        app:backgroundTint="?attr/colorPrimaryVariant"
        android:contentDescription="@string/action_save"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>