<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.view.ViewPageFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_medium"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:background="@android:color/transparent"
                android:visibility="gone"
                tools:visibility="visible" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <include
            layout="@layout/loading_indicator"
            android:id="@+id/loading_indicator"
            android:visibility="gone" />

        <include
            layout="@layout/error_indicator"
            android:id="@+id/error_indicator"
            android:visibility="gone" />

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fab_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:paddingBottom="@dimen/margin_medium"
        android:clipToPadding="false">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:src="@drawable/baseline_history_24"
            android:contentDescription="@string/action_history" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:src="@drawable/baseline_edit_24"
            android:contentDescription="@string/action_edit" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:src="@drawable/baseline_close_24"
            android:contentDescription="@string/action_open_menu" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>